# soft_double

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  soft_double.sln  soft_double.vcxproj  soft_double.vcxproj.filters  soft_double_vs2022.sln  soft_double_vs2022.vcxproj  soft_double_vs2022.vcxproj.filters  sonar-project.properties
.gcov/make/: make_gcov_01_generic.gmk  make_gcov_02_files.gmk  make_gcov_03_flags.gmk
.github/workflows/: soft_double.yml  soft_double_codecov.yml  soft_double_sonar.yml
.tidy/make/: make_tidy_02_files.gmk  make_tidy_03_flags.gmk
examples/: CMakeLists.txt  example001_roots_sqrt.cpp  example002b_pi_100k.cpp  example004_bessel_recur.cpp  example005_polylog_series.cpp  example007_catalan_series.cpp  example010_hypergeometric_2f1.cpp  example011_trig_trapezoid_integral.cpp  example012_exercise_constexpr.cpp
math/soft_double/: internals.h  soft_double.h  soft_double_decwide_t_detail_fft_bindings.h  soft_double_examples.h
math/softfloat/: soft_double.h  soft_double_decwide_t_detail_fft_bindings.h  soft_double_examples.h
math/softfloat-3/source/: f64_add_sub_mul_div.cpp  f64_sqrt.cpp  f64_to_integral_types.cpp  round_to_integral_types.cpp  s_addMagsF64.cpp  s_approxRecipSqrt32_1.cpp  s_normRoundPackToF64.cpp  s_roundPackToF64.cpp  s_subMagsF64.cpp
math/softfloat-3/source/include/: internals.h  softfloat.h
math/wide_decimal/: decwide_t.h  decwide_t_detail.h  decwide_t_detail_fft.h
test/: CMakeLists.txt  test.cpp  test_soft_double.cpp  test_soft_double_boost_math_cyl_bessel_j.cpp  test_soft_double_edge_cases.cpp  test_soft_double_examples.cpp  test_soft_double_examples.h  test_soft_double_spot_values.cpp  test_soft_double_with_decwide_t_100k_digit_pi.cpp
util/utility/: util_baselexical_cast.h  util_constexpr_algorithm_unsafe.h  util_dynamic_array.h  util_pseudorandom_time_point_seed.h
